--- a/index.html
+++ b/index.html
@@ -28,5 +28,160 @@
         </div>
     </header>
 
+    <section class="introducao">
+        <div class="container">
+            <h1>Bicicletas Feitas a Mão</h1>
+            <blockquote class="quoteExterno">
+                <p>"não tenha nada em sua casa que você não considere útil ou acredita ser bonito"</p>
+                <cite>WILLIAM MORRIS</cite>
+            </blockquote>
+            <a href="produtos.html" class="btn">Orçamento</a>
+        </div>
+    </section>
+
+    <section class="container produtos">
+
+        <h2 class="subtitulo">Produtos</h2>
+
+        <ul class="produtosLista">
+
+            <li class="grid-1-3">
+                <div class="produtosIcone">
+                    <img src="./img/Icones/passeio.svg" alt="Bikcraft Passeio">
+                </div>
+                <h3>Passeio</h3>
+                <p>Ainda assim, existem dúvidas a respeito de como a necessidade de renovação.</p>
+            </li>
+
+            <li class="grid-1-3">
+                <div class="produtosIcone">
+                    <img src="./img/Icones/esporte.svg" alt="Bikcraft Esporte">
+                </div>
+                <h3>Esporte</h3>
+                <p>Ainda assim, existem dúvidas a respeito de como a necessidade de renovação.</p>
+            </li>
+
+            <li class="grid-1-3">
+                <div class="produtosIcone">
+                    <img src="./img/Icones/retro.svg" alt="Bikcraft Retro">
+                </div>
+                <h3>Retro</h3>
+                <p>Ainda assim, existem dúvidas a respeito de como a necessidade de renovação.</p>
+            </li>
+
+        </ul>
+
+        <div class="callToAction">
+
+            <p>Clique aqui e veja os detalhes dos produtos</p>
+            <a href="produtos.html" class="btn btnPreto">Produtos</a>
+
+        </div>
+
+    </section>
+
+    <section class="portfolio">
+
+        <div class="container">
+
+            <h2 class="subtitulo">Portfólio</h2>
+
+            <ul class="portfolioLista">
+                <li class="grid-8"><img src="img/Portfolio/Retro Portfolio.svg" alt="Bicicleta Retro"></li>
+                <li class="grid-8"><img src="img/Portfolio/Passeio Portfolio.svg" alt="Bicicleta Passeio"><li>
+                <li class="grid-16"><img src="img/Portfolio/Esporte Portfolio.svg" alt="Bicicleta Esporte"></li>
+            </ul>
+
+            <div class="callToAction">
+
+                <p>Conheça mais o nosso portfólio</p>
+                <a href="portfolio.html" class="btn">Portfólio</a>
+    
+            </div>
+
+        </div>
+
+    </section>
+
+    <section class="container qualidade">
+
+        <h2 class="subtitulo">Qualidade</h2>
+        <img src="img/Logo/bikcraftQualidade.svg" alt="Bikecraft">
+
+        <ul class="qualidadeLista">
+            <li class="grid-1-3">
+                <h3>Durabilidade</h3>
+                <p>Ainda assim, existem dúvidas a respeito de como a necessidade de renovação</p>
+            </li>
+            <li class="grid-1-3">
+                <h3>Design</h3>
+                <p>Ainda assim, existem dúvidas a respeito de como a necessidade de renovação</p>
+            </li>
+            <li class="grid-1-3">
+                <h3>Sustentabilidade</h3>
+                <p>Ainda assim, existem dúvidas a respeito de como a necessidade de renovação</p>
+            </li>
+        </ul>
+
+        <div class="callToAction">
+
+            <p>Conheça mais a nossa história</p>
+            <a href="sobre.html" class="btn btnPreto">Sobre</a>
+
+        </div>
+
+    </section>
+
+    <section class="quebra">
+        <blockquote class="quoteExterno container">
+            <p>"O verdadeiro segredo da felicidade está em ter um genuíno interesse por todos os detalhes  da vida coridiana."</p>
+            <cite>WILLIAM MORRIS</cite>
+        </blockquote>
+
+    </section>
+
+    <footer>
+
+        <div class="footer">
+
+            <div class="container">
+
+                <div class="grid-8 footerHistoria">
+                    <h3>Nossa história</h3>
+                    <p>O verdadeiro segredo da felicidade está em ter um genuíno
+                        interesse por todos os detalhes da vida cotidiana. Interesse por todos os detalhes da vida cotidiana.
+                    </p>
+                </div>
+
+                <div class="grid-4 footerContatos">
+                    <h3>Contato</h3>
+                    <ul>
+                        <li>- 21 9999-9999</li>
+                        <li>- contato@bikcraft.com</li>
+                        <li>- Botafogo - RJ</li>
+                    </ul>
+                </div>
+
+                <div class="grid-4 footerRedes">
+                    <h3>Redes Sociais</h3>
+                    <ul>
+                        <li><a href="http://facebook.com" target="_blank"><img src="img/Redes Sociais/facebook.svg" alt="Bikcraft Facebook"></a></li>
+                        <li><a href="http://instagram.com" target="_blank"><img src="img/Redes Sociais/instagram-1.svg" alt="Bikcraft Instagram"></a></li>
+                        <li><a href="http://twitter.com" target="_blank"><img src="img/Redes Sociais/twitter-1.svg" alt="Bikcraft Twitter"></a></li>
+                    </ul>
+                </div>
+
+            </div>
+
+        </div>
+
+        <div class="copy">
+            <div class="container">
+                <p class="grid-16">Bikcraft 2015 - Alguns direitos reservados.</p>
+            </div>
+        </div>
+
+    </footer>
+
 </body>
 </html>
