--- a/sobre.html
+++ b/sobre.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/grid.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>Bikcraft</title>
+    <link rel="stylesheet" href="css/sobre.css">
+    <title>Bikcraft - Sobre</title>
 </head>
 <body>
 
@@ -19,7 +20,7 @@
 
             <nav class="headerMenu" class="grid-12">
                 <ul>
-                    <li><a href="sobre.html">Sobre</a></li>
+                    <li><a href="sobre.html" class="menuAtivo">Sobre</a></li>
                     <li><a href="produtos.html">Produtos</a></li>
                     <li><a href="portfolio.html">Portfólio</a></li>
                     <li><a href="contatos.html">Contatos</a></li>
@@ -28,77 +29,32 @@
         </div>
     </header>
 
-    <section class="introducao">
+    <section class="introducaoInterna introducaoSobre">
         <div class="container">
-            <h1>Bicicletas Feitas a Mão</h1>
-            <blockquote class="quoteExterno">
-                <p>"Não tenha nada em sua casa que você não considere útil ou acredita ser bonito"</p>
-                <cite>WILLIAM MORRIS</cite>
-            </blockquote>
-            <a href="produtos.html" class="btn">Orçamento</a>
+            <h1>Sobre</h1>
+            <p>Conheça mais sobre Bikcraft</p>
         </div>
     </section>
 
-    <section class="container produtos">
-
-        <h2 class="subtitulo">Produtos</h2>
-
-        <ul class="produtosLista">
-
-            <li class="grid-1-3">
-                <div class="produtosIcone">
-                    <img src="./img/Icones/passeio.svg" alt="Bikcraft Passeio">
-                </div>
-                <h3>Passeio</h3>
-                <p>Ainda assim, existem dúvidas a respeito de como a necessidade de renovação.</p>
-            </li>
-
-            <li class="grid-1-3">
-                <div class="produtosIcone">
-                    <img src="./img/Icones/esporte.svg" alt="Bikcraft Esporte">
-                </div>
-                <h3>Esporte</h3>
-                <p>Ainda assim, existem dúvidas a respeito de como a necessidade de renovação.</p>
-            </li>
-
-            <li class="grid-1-3">
-                <div class="produtosIcone">
-                    <img src="./img/Icones/retro.svg" alt="Bikcraft Retro">
-                </div>
-                <h3>Retro</h3>
-                <p>Ainda assim, existem dúvidas a respeito de como a necessidade de renovação.</p>
-            </li>
-
-        </ul>
-
-        <div class="callToAction">
-
-            <p>Clique aqui e veja os detalhes dos produtos</p>
-            <a href="produtos.html" class="btn btnPreto">Produtos</a>
-
+    <section class="missaoSobre container">
+        <div class="grid-10">
+            <h2 class="subtituloInterno">História, Missão e Visão</h2>
+            <p>O verdadeiro segredo da felicidade está em ter um genuíno interesse por todos os detalhes da vida cotidiana. Interesse por todos os detalhes da vida cotidiana.</p>
+            <p>O verdadeiro segredo da felicidade está em ter um genuíno. interesse por todos os detalhes da vida cotidiana. Interesse por todos os detalhes da vida cotidiana.</p>
         </div>
 
-    </section>
-
-    <section class="portfolio">
-
-        <div class="container">
-
-            <h2 class="subtitulo">Portfólio</h2>
-
-            <ul class="portfolioLista">
-                <li class="grid-8"><img src="img/Portfolio/Retro Portfolio.svg" alt="Bicicleta Retro"></li>
-                <li class="grid-8"><img src="img/Portfolio/Passeio Portfolio.svg" alt="Bicicleta Passeio"><li>
-                <li class="grid-16"><img src="img/Portfolio/Esporte Portfolio.svg" alt="Bicicleta Esporte"></li>
+        <div class="grid-6">
+            <h2 class="subtituloInterno">Valores</h2>
+            <ul>
+                <li>- Qualidade no processo com</li> 
+                <li>- Foco no cliente sem perder a</li> 
+                <li> - Diversão, preservando a</li>
+                <li> - Natureza com sustentabilidade</li>
             </ul>
+        </div>
 
-            <div class="callToAction">
-
-                <p>Conheça mais o nosso portfólio</p>
-                <a href="portfolio.html" class="btn">Portfólio</a>
-    
-            </div>
-
+        <div class="grid-16 imgEquipe">
+            <img src="img/Portfolio/Sobre-2.svg" alt="Equipe Bikcraft">
         </div>
 
     </section>
@@ -106,7 +62,7 @@
     <section class="container qualidade">
 
         <h2 class="subtitulo">Qualidade</h2>
-        <img src="img/Logo/bikcraftQualidade.svg" alt="Bikecraft">
+        <img src="img/Logo/bikcraftQualidade.svg" alt="Bikcraft">
 
         <ul class="qualidadeLista">
             <li class="grid-1-3">
