--- a/produtos.html
+++ b/produtos.html
@@ -61,14 +61,14 @@
 
     <section class="container produtoItem">
         <div class="grid-11 separador">
-            <img src="img/Portfolio/esporte-1.svg" alt="Produtos Esporte">
+            <img src="img/Portfolio/foto-titulo-1.svg" alt="Produtos Esporte">
             <h2>Esporte</h2>
         </div>
         <div class="grid-5 produtoIcone">
             <img src="img/Icones/esporte.svg" alt="Produtos Esporte Icone">
         </div>
         <div class="grid-8">
-            <img src="img/Portfolio/esporte-2.svg" alt="Esporte">
+            <img src="img/Portfolio/foto-1.svg" alt="Esporte">
         </div>
         <div class="grid-8 listaProduto">
             <p>O verdadeiro segredo da felicidade está em ter um genuíno interesse por todos os detalhes da vida cotidiana. Interesse por todos os detalhes da vida cotidiana.</p>
