--- a/sobre.html
+++ b/sobre.html
@@ -32,12 +32,12 @@
 
     <section class="introducaoInterna introducaoSobre">
         <div class="container">
-            <h1>Sobre</h1>
-            <p>Conheça mais sobre Bikcraft</p>
+            <h1 data-anime="300">Sobre</h1>
+            <p data-anime="500">Conheça mais sobre Bikcraft</p>
         </div>
     </section>
 
-    <section class="missaoSobre container">
+    <section class="missaoSobre container" data-anime="700">
         <div class="grid-10">
             <h2 class="subtituloInterno">História, Missão e Visão</h2>
             <p>O verdadeiro segredo da felicidade está em ter um genuíno interesse por todos os detalhes da vida cotidiana. Interesse por todos os detalhes da vida cotidiana.</p>
@@ -54,7 +54,7 @@
             </ul>
         </div>
 
-        <div class="grid-16 imgEquipe">
+        <div class="grid-16 imgEquipe" data-anime="900">
             <img src="img/Portfolio/Sobre-2.svg" alt="Equipe Bikcraft">
         </div>
 
@@ -139,6 +139,8 @@
         </div>
 
     </footer>
+
+    <script src="js/script.js"></script>
 
 </body>
 </html>
