--- a/portfolio.html
+++ b/portfolio.html
@@ -38,18 +38,31 @@
         </div>
     </section>
     
-    <section class="container">
+    <section class="container" data-slide="quote">
         <blockquote class="quoteClientes">
             <p>"No munda atual, a contínua expansão de nossa atividade cumpre um papel essencial na formulação da gestão inovadora da qual fazemos parte."</p>
             <cite>Barbara Moss</cite>
         </blockquote>
+        <blockquote class="quoteClientes">
+            <p>"Nada melhor do que dar um rolê com a minha bikcraaft na orla. Essa é a minha companheira mais fiel, nunca me traiu e está sempre a minha disposição."</p>
+            <cite>Jhony Rato</cite>
+        </blockquote>
+        <blockquote class="quoteClientes">
+            <p>"Aqueles que ainda não possuem uma Bikcraft, não sabem o que estão perdendo. A precisão é absurda e a velocidade transcendental."</p>
+            <cite>Bernardo</cite>
+        </blockquote>
     </section>
 
     <section class="portfolio">
-        <div class="container">
+        <div class="container" data-slide="slide">
             <ul class="portfolioLista">
                 <li class="grid-8"><img src="img/Portfolio/Retro Portfolio.svg" alt="Bicicleta Retro"></li>
                 <li class="grid-8"><img src="img/Portfolio/Passeio Portfolio.svg" alt="Bicicleta Passeio"><li>
+                <li class="grid-16"><img src="img/Portfolio/Esporte Portfolio.svg" alt="Bicicleta Esporte"></li>
+            </ul>
+            <ul class="portfolioLista">
+                <li class="grid-8"><img src="img/Portfolio/Passeio Portfolio.svg" alt="Bicicleta Passeio"><li>
+                <li class="grid-8"><img src="img/Portfolio/Retro Portfolio.svg" alt="Bicicleta Retro"></li>
                 <li class="grid-16"><img src="img/Portfolio/Esporte Portfolio.svg" alt="Bicicleta Esporte"></li>
             </ul>
         </div>
@@ -99,6 +112,8 @@
         </div>
 
     </footer>
+
+    <script src="js/script.js"></script>
 
 </body>
 </html>
